Fixed scrollbar, top toolbar etc

--- a/src/app/shared/shell/shell.component.scss
+++ b/src/app/shared/shell/shell.component.scss
@@ -18,6 +18,14 @@
   font-family: sofia-pro;
 }
 
+.toolbar{
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background: rgb(19, 19, 19);
+}
+
 .sidenav .mat-toolbar {
   background: inherit;
 }
@@ -31,15 +39,3 @@
 .fill-space {
   flex: 1 1 auto;
 }
-
-// i {
-//   font-style: normal;
-//   font-size: 1.25em;
-//   margin-right: 16px;
-// }
-
-// .avatar {
-//   width: 1.75em;
-//   border-radius: 50%;
-//   margin: 0 10px 5px;
-// }
